--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>FGHF</H1>
+    <H1>Hello JS </H1>
     <script src="app.js"></script>
 </body>
 </html>
